--- a/about.html
+++ b/about.html
@@ -66,8 +66,8 @@
                     <img src="2.png" alt="GMB Sons Logo" class="logo-image">
                 </div>
                 <div class="logo-text">
-                    <span class="company-name">GMB SONS</span>
-                    <span class="company-tagline">IMPORT EXPORT & TRADING</span>
+                    <span class="company-name">GMB SONS (PVT) LTD</span>
+                    <span class="company-tagline">IMPORTER , EXPORTER & TRADING</span>
                 </div>
             </div>
             <button class="mobile-menu-toggle" onclick="toggleMenu()" aria-label="Toggle menu">
@@ -96,7 +96,7 @@
     </div>
     <div class="container">
         <div class="inner-page-hero-content">
-            <h1>About GMB SONS</h1>
+            <h1>About GMB SONS (PVT) LTD</h1>
             <p>Your trusted partner in international trade since 2010</p>
         </div>
     </div>
@@ -107,7 +107,7 @@
         <div class="about-grid">
             <div class="about-text">
                 <h2>Who We Are</h2>
-                <p>GMB SONS PVT LTD is a leading import-export and trading company based in Islamabad, Pakistan. With over 15 years of experience in international trade, we have established ourselves as a trusted name in the industry.</p>
+                <p>GMB SONS (PVT) LTD is a leading import-export and trading company based in Islamabad, Pakistan. With over 15 years of experience in international trade, we have established ourselves as a trusted name in the industry.</p>
                 <p>Our expertise spans across multiple product categories, serving clients both locally and internationally. We pride ourselves on our commitment to quality, reliability, and customer satisfaction.</p>
             </div>
             <div class="about-image">🏢</div>
@@ -170,8 +170,8 @@
                     <img src="2.png" alt="GMB Sons Logo" class="logo-image">
                 </div>
                      <div class="logo-text">
-                    <span class="company-name" style="color:#c5cae9;">GMB SONS </span>
-                        <span class="company-tagline">IMPORT & EXPORT</span>
+                    <span class="company-name" style="color:#c5cae9;">GMB SONS (PVT) LTD</span>
+                        <span class="company-tagline">IMPORTER , EXPORTER & TRADING</span>
                     </div>
                 </div>
                 <p>Your trusted partner in international trade and local supply solutions.</p>
