--- a/products.html
+++ b/products.html
@@ -15,8 +15,8 @@
                     <img src="2.png" alt="GMB Sons Logo" class="logo-image">
                 </div>
                 <div class="logo-text">
-                    <span class="company-name">GMB SONS</span>
-                    <span class="company-tagline">IMPORT EXPORT & TRADING</span>
+                    <span class="company-name">GMB SONS (PVT) LTD</span>
+                    <span class="company-tagline">IMPORTER , EXPORTER & TRADING</span>
                 </div>
             </div>
             <button class="mobile-menu-toggle" onclick="toggleMenu()" aria-label="Toggle menu">
@@ -154,8 +154,8 @@
                     <img src="2.png" alt="GMB Sons Logo" class="logo-image">
                 </div>
                      <div class="logo-text">
-                    <span class="company-name" style="color:#c5cae9;">GMB SONS </span>
-                        <span class="company-tagline">IMPORT & EXPORT</span>
+                    <span class="company-name" style="color:#c5cae9;">GMB SONS (PVT) LTD</span>
+                        <span class="company-tagline">IMPORTER , EXPORTER & TRADING</span>
                     </div>
                 </div>
                 <p>Your trusted partner in international trade and local supply solutions.</p>
