--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
         <div class="about-grid">
             <div class="about-text">
                 <h2>Who We Are</h2>
-                <p>GMB SONS (PVT) LTD is a leading import-export and trading company based in Islamabad, Pakistan. With over 15 years of experience in international trade, we have established ourselves as a trusted name in the industry.</p>
+                <p>GMB SONS (PVT) LTD is a leading import-export and trading company based in Karachi, Pakistan. With over 15 years of experience in international trade, we have established ourselves as a trusted name in the industry.</p>
                 <p>Our expertise spans across multiple product categories, serving clients both locally and internationally. We pride ourselves on our commitment to quality, reliability, and customer satisfaction.</p>
             </div>
             <div class="about-image">🏢</div>
