Fix experience years in contact information

--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
                 <div class="contact-info-card">
                     <h3>Why Choose GMB SONS?</h3>
                     <ul class="why-choose-list">
-                        <li class="why-choose-item">✓ 15+ Years of Experience</li>
+                        <li class="why-choose-item">✓ 1 Years of Experience</li>
                         <li class="why-choose-item">✓ Quality Assured Products</li>
                         <li class="why-choose-item">✓ Competitive Pricing</li>
                         <li class="why-choose-item">✓ Fast & Reliable Service</li>
