Update statistics in index.html

--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-item">
-                    <div class="stat-number">500+</div>
+                    <div class="stat-number">100+</div>
                     <div class="stat-label">Happy Clients</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">50+</div>
+                    <div class="stat-number">10+</div>
                     <div class="stat-label">Countries Served</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">1000+</div>
+                    <div class="stat-number">200+</div>
                     <div class="stat-label">Products Traded</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">15+</div>
+                    <div class="stat-number">1</div>
                     <div class="stat-label">Years Experience</div>
                 </div>
             </div>
